--- a/IndicadoresFreyman/MasterPage.Master
+++ b/IndicadoresFreyman/MasterPage.Master
@@ -12,6 +12,7 @@
 <body>
     <form id="form1" runat="server">
         <div>
+            <asp:ScriptManager ID="ScriptManager1" runat="server"></asp:ScriptManager>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
