--- a/IndicadoresFreyman/MasterPage.Master
+++ b/IndicadoresFreyman/MasterPage.Master
@@ -49,7 +49,8 @@
                      <telerik:RadMenuItem Text="REPORTES">
                          <GroupSettings Width="250px" />
                          <Items>
-                             <telerik:RadMenuItem Text="Tablero Indicadores" NavigateUrl="/Reportes/TableroHistorico.aspx" EnableImageSprite="true" CssClass="icon-chair"></telerik:RadMenuItem>
+                             <telerik:RadMenuItem Text="Tablero por Indicador" NavigateUrl="/Reportes/Tablero.aspx?TipoTablero=I" EnableImageSprite="true" CssClass="icon-chair"></telerik:RadMenuItem>
+                             <telerik:RadMenuItem Text="Tablero por Empleado" NavigateUrl="/Reportes/Tablero.aspx?TipoTablero=E" EnableImageSprite="true" CssClass="icon-chair"></telerik:RadMenuItem>
                              <telerik:RadMenuItem Text="RRHH" NavigateUrl="/Reportes/ReporteRRHH.aspx" EnableImageSprite="true" CssClass="icon-sofa"></telerik:RadMenuItem>
                              <telerik:RadMenuItem Text="Gráficas" NavigateUrl="" EnableImageSprite="true" CssClass="icon-sofa"></telerik:RadMenuItem>
                          </Items>
