--- a/IndicadoresFreyman/MasterPage.Master
+++ b/IndicadoresFreyman/MasterPage.Master
@@ -34,8 +34,8 @@
                      <telerik:RadMenuItem Text="ADMINISTRAR">
                          <GroupSettings Width="250px" />
                          <Items>
-                             <telerik:RadMenuItem Text="Crear" NavigateUrl="crearIndicadores.aspx" EnableImageSprite="true" CssClass="icon-chair"></telerik:RadMenuItem>
-                             <telerik:RadMenuItem Text="Asignar" NavigateUrl="asignaIndicador.aspx" EnableImageSprite="true" CssClass="icon-sofa"></telerik:RadMenuItem>
+                             <telerik:RadMenuItem Text="Crear" NavigateUrl="crear.aspx" EnableImageSprite="true" CssClass="icon-chair"></telerik:RadMenuItem>
+                             <telerik:RadMenuItem Text="Asignar" NavigateUrl="asignaIndicadores.aspx" EnableImageSprite="true" CssClass="icon-sofa"></telerik:RadMenuItem>
                          </Items>
                      </telerik:RadMenuItem>
                      <%--<telerik:RadMenuItem Text="SOLICITAR VACACIONES" NavigateUrl="/VacacionesAD/Solicitud_M.aspx" EnableImageSprite="true" />--%>
