--- a/IndicadoresFreyman/css/pantallaDivida.css
+++ b/IndicadoresFreyman/css/pantallaDivida.css
@@ -7,10 +7,10 @@
 .left-pane  {
     flex: 1; /* Divide la pantalla en partes iguales */
     display: flex;
-    flex-basis: 40%;
+    flex-basis: 20%;
     align-items: center;
     /*justify-content: center;*/
-    flex-direction: column;
+    flex-direction:row;
     color: black;
 }
 
@@ -18,7 +18,7 @@
 .right-pane {
     flex: 1; /* Divide la pantalla en partes iguales */
     display: flex;
-    flex-basis: 60%;
+    flex-basis: 80%;
     align-items: center;
     /*justify-content: center;*/
     flex-direction: column;
