--- a/IndicadoresFreyman/css/pantallaDivida.css
+++ b/IndicadoresFreyman/css/pantallaDivida.css
@@ -4,13 +4,13 @@
 }
 
 /* Estilo para el panel izquierdo */
-.left-pane  {
+.left-pane {
     flex: 1; /* Divide la pantalla en partes iguales */
     display: flex;
-    flex-basis: 20%;
+    flex-basis: 30%;
     align-items: center;
     /*justify-content: center;*/
-    flex-direction:row;
+    flex-direction: column;
     color: black;
 }
 
@@ -18,7 +18,7 @@
 .right-pane {
     flex: 1; /* Divide la pantalla en partes iguales */
     display: flex;
-    flex-basis: 80%;
+    flex-basis: 70%;
     align-items: center;
     /*justify-content: center;*/
     flex-direction: column;
