icono de manual de usuario

--- a/IndicadoresFreyman/MasterPage.Master
+++ b/IndicadoresFreyman/MasterPage.Master
@@ -61,6 +61,9 @@
                  <table>
                      <tr>
                          <td>
+                             <asp:ImageButton ID="btnManual" Width="30px" ImageUrl="~/Imagenes/Manual.png" runat="server" ToolTip ="MANUAL DE USUARIO" OnClick ="btnManual_Click" style="margin-right :20px" OnClientClick="llamarPagina('http://lof.com.mx:3645/Imagenes/MU-Indicadores_V2.pdf')" />
+                         </td>
+                         <td>
                              <asp:ImageButton ID="btnDeslog" ImageUrl="~/Imagenes/LogF_.png" Width="30px" Style="margin-right: 85%" runat="server" OnClick="btnDeslog_Click" /></td>
                          <td>
                              <%--<span style="color: dimgray; cursor: pointer">SALIR</span>--%>
